[project]
name = "ai-feedback-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fpdf>=1.7.2",
    "generativeai>=0.0.1",
    "google-genai>=1.11.0",
    "google-generativeai>=0.8.5",
    "markdown>=3.8",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pymupdf4llm>=0.0.21",
    "python-dotenv>=1.1.0",
    "reportlab>=4.4.0",
    "seaborn>=0.13.2",
    "streamlit>=1.44.1",
]
